--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-noorskin-true-skin-landing-page",
+  "name": "aerozon---copy-clean",
   "private": true,
   "version": "0.0.0",
   "type": "module",
